--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Projeto de Spring React"
+      content="Projeto Spring React"
     />
     <title>DSVendas</title>
   </head>
